OYF: scroll menu jumping page fix3

--- a/public/css/oyf/main.css
+++ b/public/css/oyf/main.css
@@ -38,14 +38,9 @@
 }
 
 /* footer and header custom */
-header.fixed_type .header_wrapper {
-    min-height:50px;
-}
-
 header .header_wrapper {
     min-height:50px;
 }
-
 
 .footer_wrapper .signature {
     margin-top: 10px;
